# pqc-benchmark

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: plot_classical_results.py  plot_comparison.py  plot_pqc_results.py  plot_tls_results.py  regenerate_all_figures.py
docs/: algorithms.md  defense-slides.pptx  hardware-setups.md  methodology.md
results/: README.md
results/processed/: stats_summary.csv  tls_stats_summary.csv
results/raw/classical/celeron/: ecdsap256.csv  ecdsap384.csv  ecdsap521.csv  ed25519.csv  ed448.csv  rsa2048.csv  rsa3072.csv  rsa4096.csv
results/raw/classical/raspberry/: ecdsap256.csv  ecdsap384.csv  ecdsap521.csv  ed25519.csv  ed448.csv  rsa2048.csv  rsa3072.csv  rsa4096.csv
results/raw/classical/ryzen/: ecdsap256.csv  ecdsap384.csv  ecdsap521.csv  ed25519.csv  ed448.csv  rsa1024.csv  rsa2048.csv  rsa3072.csv  rsa4096.csv
results/raw/pqc/celeron/: kem_dperezm24_ML-KEM-1024.csv  kem_dperezm24_ML-KEM-512.csv  kem_dperezm24_ML-KEM-768.csv  sig_dperezm24_ML-DSA-44.csv  sig_dperezm24_ML-DSA-65.csv  sig_dperezm24_ML-DSA-87.csv  summary_by_algo_op.csv
results/raw/pqc/raspberry/: kem_raspberrypi_ML-KEM-1024.csv  kem_raspberrypi_ML-KEM-512.csv  kem_raspberrypi_ML-KEM-768.csv  sig_raspberrypi_ML-DSA-44.csv  sig_raspberrypi_ML-DSA-65.csv  sig_raspberrypi_ML-DSA-87.csv  summary_by_algo_op.csv
src/pqc_benchmark/: __init__.py
src/pqc_benchmark/reporting/: __init__.py  plots_classical.py  plots_comparison.py  plots_pqc.py  plots_tls.py
tests/: conftest.py  test_reporting.py
(+155 files in other folders)
