[project]
name = "pqc-benchmark"
version = "0.1.0"
description = "Reproducible benchmarking framework for NIST PQC algorithms (ML-KEM, ML-DSA) across heterogeneous hardware."
authors = [{ name = "Darío Pérez Martín", email = "dpm24mainstream@proton.me" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["post-quantum cryptography", "benchmarking", "ml-kem", "ml-dsa", "pqc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/dpm2448dpm/pqc-benchmark"
Thesis   = "https://hdl.handle.net/10609/154216"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
